--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,6 +1,6 @@
         <footer class="footer">
             <div class="container clearfix">
-                <div class="copyright fl">_(webConfig.copyright)</div>
+                <div class="copyright fl">_(web.copyright)</div>
                 <a href="/" class="logo fr">
                     <img src="/static/img/logo.png" alt="">
                 </a>
