--- a/includes/widget-link.html
+++ b/includes/widget-link.html
@@ -2,5 +2,5 @@
     <div class="header-title">
         <span>友情链接</span>
     </div>
-    <div class="content">_(webConfig.links)</div>
+    <div class="content">_(web.links)</div>
 </div>
