--- a/includes/header.html
+++ b/includes/header.html
@@ -2,11 +2,11 @@
 <html lang="zh-CN">
     <head>
         <meta charset="UTF-8" />
-        <title>_(webConfig.title)</title>
+        <title>_(web.title)</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0,minimal-ui">
-        <meta name="keywords" content="_(webConfig.keywords)">
-        <meta name="description" content="_(webConfig.description)">
+        <meta name="keywords" content="_(web.keywords)">
+        <meta name="description" content="_(web.description)">
         <link rel="shortcut icon" href="/static/img/favicon.ico">
     </head>
     <body>
@@ -18,7 +18,7 @@
                     <a class="logo fl" href="/">
                         <img src="/static/img/logo.png" alt="avatar">
                     </a>
-                    <div class="menu fl">_(webConfig.menu)</div>
+                    <div class="menu fl">_(web.menus)</div>
                     <div class="search-tool fr">
                         <input type="text" class="search-input" placeholder="Search..." maxlength="100">
                         <a href="#" class="search-btn lnr lnr-magnifier"></a>
