--- a/includes/widget-about.html
+++ b/includes/widget-about.html
@@ -6,13 +6,13 @@
         <div class="author-info flex">
             <img class="avatar" src="/static/img/avatar.png" alt="avatar">
             <div class="info flex-item flex flex-hc">
-                <div class="name">_(webConfig.author.name)</div>
-                <div class="title">_(webConfig.author.title)</div>
+                <div class="name">_(web.author.name)</div>
+                <div class="title">_(web.author.title)</div>
             </div>
         </div>
         <div class="description">
-            _(webConfig.author.description)
+            _(web.author.description)
         </div>
-        <div class="social flex">_(webConfig.social)</div>
+        <div class="social flex">_(web.socials)</div>
     </div>
 </div>
