--- a/sass/archive.scss
+++ b/sass/archive.scss
@@ -1,13 +1,5 @@
 .archive-page {
-    .archive-header {
-        font-size: 24px;
-        font-weight: bold;
-        margin-bottom: 40px;
-        height: 50px;
-        line-height: 50px;
-        border-bottom: 1px solid rgba(0,0,0,.1);
-    }
-    .archive-posts {
+    .content {
         .archive-item {
             display: block;
             margin-bottom: 20px;
