--- a/includes/header.html
+++ b/includes/header.html
@@ -21,7 +21,7 @@
                     <div class="menu fl">_(web.menus)</div>
                     <div class="search-tool fr">
                         <input type="text" class="search-input" placeholder="Search..." maxlength="100">
-                        <a href="#" class="search-btn lnr lnr-magnifier"></a>
+                        <a href="#" class="search-btn icon-magnifier"></a>
                     </div>
                 </div>
             </header>
