--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,13 +1,10 @@
         <footer class="footer">
-            <div class="container clearfix">
-                <div class="copyright fl">_(web.copyright)</div>
-                <a href="/" class="logo fr">
-                    <img src="/static/img/logo.png" alt="">
-                </a>
+            <div class="container">
+                <div class="copyright">_(web.copyright)</div>
             </div>
         </footer>
         </div>
         <!-- wrapper 结束 -->
     </body>
-<html>
+</html>
     
