--- a/includes/header.html
+++ b/includes/header.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0,minimal-ui">
         <meta name="keywords" content="_(web.keywords)">
         <meta name="description" content="_(web.description)">
-        <link rel="shortcut icon" href="/static/img/favicon.ico">
+        <link rel="shortcut icon" href="_(dev.publicPath)static/img/favicon.ico">
     </head>
     <body>
         <!-- wrapper 开始 -->
@@ -16,9 +16,9 @@
             <header class="header">
                 <div class="container clearfix">
                     <a class="logo fl" href="/">
-                        <img src="/static/img/logo.png" alt="avatar">
+                        <img src="_(dev.publicPath)static/img/logo.png" alt="avatar">
                     </a>
-                    <div class="menu fl">_(web.menus)</div>
+                    <div class="menu fl mobile-hide">_(web.menus)</div>
                     <div class="search-tool fr">
                         <input type="text" class="search-input" placeholder="Search..." maxlength="100">
                         <a href="#" class="search-btn icon-magnifier"></a>
@@ -26,3 +26,8 @@
                 </div>
             </header>
             <!-- header 结束 -->
+            <div class="mobile-menu mobile-show">
+                <div class="container clearfix">
+                    _(web.menus)
+                </div>
+            </div>
