--- a/includes/widget-about.html
+++ b/includes/widget-about.html
@@ -4,7 +4,7 @@
     </div>
     <div class="content">
         <div class="author-info flex">
-            <img class="avatar" src="/static/img/avatar.png" alt="avatar">
+            <img class="avatar" src="_(dev.publicPath)static/img/avatar.png" alt="avatar">
             <div class="info flex-item flex flex-hc">
                 <div class="name">_(web.author.name)</div>
                 <div class="title">_(web.author.title)</div>
