--- a/layouts/default.html
+++ b/layouts/default.html
@@ -4,7 +4,7 @@
         <div class="part-left flex-item">
             <!-- @slot:true -->
         </div>
-        <div class="part-right">
+        <div class="part-right mobile-hide">
             <!-- @include:sidebar -->
         </div>
     </div>
