--- a/sass/common.scss
+++ b/sass/common.scss
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 @import './utils/variable';
 @import './utils/mixin';
-@import './utils/slider';
 
 html, body, .wrapper {
 	height: 100%;
@@ -218,25 +217,15 @@ img {
 
 .footer {
 	flex: 0 0 auto;
-	line-height: 50px;
-	padding: 10px 0;
+	padding: 20px 0;
+	background: rgba(0,0,0,.88);
 	.container {
-		border-top: 1px solid #e4e4e4;
 		.copyright {
-			color: rgba(0,0,0,.5);
+			color: rgba(255,255,255,.5);
 			font-size: 13px;
-		}
-		.logo {
-			opacity: .5;
-			display: inline-block;
-			padding-top: 15px;
-			height: 50px;
-			img {
-				height: 20px;
+			a {
+				color: #fff;
 			}
-			&:hover {
-				opacity: 1;
-			} 
 		}
 	}
 }
@@ -364,15 +353,6 @@ img {
 		position: fixed;
 		top: 60px;
 		bottom: 0;
-	}
-}
-
-#nprogress {
-	.bar {
-		background: #000;
-	}
-	.peg {
-		box-shadow: 0 0 10px #000, 0 0 5px #000;
 	}
 }
 
