--- a/sass/posts.scss
+++ b/sass/posts.scss
@@ -37,6 +37,8 @@
             min-height: 45px;
             line-height: 1.5;
             margin: 10px 0;
+            word-break:break-all;
+            word-wrap:break-word;
         }
         .meta {
             color: rgba(0,0,0,.5);
@@ -115,6 +117,8 @@
     }
     .post-content {
         margin-bottom: 50px;
+        word-break:break-all;
+        word-wrap:break-word;
         .load {
             margin-bottom: 20px;
         }
