--- a/sass/utils/mobile.scss
+++ b/sass/utils/mobile.scss
@@ -1,75 +1,33 @@
 @charset "UTF-8";
-@import './variable';
 
-html {
-	font-size: 312.5%;
-}
-@media screen and (max-width: 359px) and (orientation: portrait) {
-	html {
-		font-size: 266.67%;
-	}
-}
-@media screen and (min-width: 360px) and (max-width: 374px) and (orientation: portrait) {
-	html {
-		font-size: 300%;
-	}
-}
-@media screen and (min-width: 384px) and (max-width: 399px) and (orientation: portrait) {
-	html {
-		font-size: 320%;
-	}
-}
-@media screen and (min-width: 400px) and (max-width: 413px) and (orientation: portrait) {
-	html {
-		font-size: 333.33%;
-	}
-}
-@media screen and (min-width: 414px) and (max-width: 431px) and (orientation: portrait) {
-	html {
-		font-size: 345%;
-	}
-}
-@media screen and (min-width: 432px) and (max-width: 479px) and (orientation: portrait) {
-	html {
-		font-size: 360%;
-	}
-}
-@media screen and (min-width: 480px) and (max-width: 639px) and (orientation: portrait) {
-	html {
-		font-size: 400%;
-	}
-}
-@media screen and (min-width: 640px) and (orientation: portrait) {
-	html {
-		font-size: 533.33%;
-	}
+.mobile-show {
+	display: none;
 }
 
-.f12 {
-	font-size: 0.28rem;
-	transform: scale(0.9);
-}
-
-.f14 {
-	font-size: 0.28rem;
-}
-
-.f15 {
-	font-size: 0.3rem;
-}
-
-.f16 {
-	font-size: 0.34rem;
-}
-
-.f18 {
-	font-size: 0.36rem;
-}
-
-.f20 {
-	font-size: 0.4rem;
-}
-
-.f22 {
-	font-size: 0.5rem;
+.mobile {
+	.mobile-hide {
+		display: none;
+	}
+	.mobile-show {
+		display: block;
+	}
+	.container {
+		width: 100%;
+		padding: 0 15px;
+	}
+	.post-page {
+		margin-top: 0;
+	}
+	.mobile-menu {
+		font-size: 13px;
+		height: 36px;
+		line-height: 36px;
+		background: #fafafa;
+		border-bottom: 1px solid #f0f0f0;
+		border-top: 1px solid #f0f0f0;
+		.item {
+			color: rgba(0,0,0,.68);
+			margin-right: 30px;
+		}
+	}
 }
