--- a/includes/header.html
+++ b/includes/header.html
@@ -16,7 +16,7 @@
             <header class="header">
                 <div class="container clearfix">
                     <a class="logo fl" href="/">
-                        <img src="_(dev.publicPath)static/img/logo.png" alt="avatar">
+                        <img src="_(dev.publicPath)static/img/logo.png" alt="logo">
                     </a>
                     <div class="menu fl mobile-hide">_(web.menus)</div>
                     <div class="search-tool fr">
